# apex-briefing-backend

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  railway.toml  render.yaml  requirements.txt
coach/: cli.py  config.py  export_product.py
coach/analysis/: __init__.py  ai_selected_detail.py  ai_session_debrief.py  compare_runs.py  driver_profile.py  extract_features.py  generate_coaching.py  grounded_llm.py  racecraft.py  replay_guidance.py  session_plan.py  track_mapping.py
coach/app/: __init__.py  job_runner.py  service.py  session_store.py  upload_flow.py  uploads.py
coach/pipeline/: __init__.py  align_signals.py  compute_track_progress.py  decode_sd_msgs.py  ingest_mcap.py  pipeline_runner.py  segment_track.py
configs/: default.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_RAILWAY.md  DEPLOYMENT_RENDER.md
scripts/: bootstrap.sh  prepare_render_disk.sh  run_api.sh
